security: harden auth, uploads, error handling and headers
Backend hardening ahead of real user data going into this app:

- Login no longer leaks account existence: password check happens
  before the blocked-status check, and a constant-time dummy hash
  comparison runs when the email doesn't exist, so response content
  and timing can't be used to enumerate registered emails.
- Brute-force protection: LoginAttemptService locks an email out for
  15 minutes after 5 failed logins (in-memory; swap for Redis if this
  ever runs multi-instance).
- Media upload validates content-type (image only) and size (8MB) at
  the app level, and no longer leaks the raw Cloudinary exception
  message (e.g. signing errors) back to the client. Folder name is
  sanitized before being used in the storage path.
- Global multipart limit cut from 350MB/1200MB (inherited from a
  leftover config) to 10MB/12MB — the old values let any request body
  be buffered before our own validation ever ran.
- GlobalExceptionHandler gained a catch-all handler so an unexpected
  exception returns a generic message instead of leaking a stack
  trace or internal details; stacktraces are also disabled at the
  server level.
- Security headers: X-Frame-Options: DENY, HSTS, Referrer-Policy.
- CORS origins are now a required, env-driven property instead of a
  hardcoded localhost pattern — prod must set CORS_ALLOWED_ORIGINS
  to its real frontend domain(s), no default.
- Actuator now only exposes /actuator/health publicly; everything
  else requires admin auth, and health details are hidden in prod.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>